# ToDo_Nation

./: .gitignore  pyproject.toml  requirements.txt
DjangoToDo/: settings.py
todo/: forms.py  views.py
todo/templates/todo/: todo.html
users/templates/registration/: login.html
users/templates/users/: register.html
